# infinite-canvas-webgl

./: .gitignore  Cargo.toml  README.md  build.sh  index.html  package-lock.json  package.json
old/: index.html  old_lib.rs
shaders/: dot.frag  dot.vert  dot_vert_frag.txt
src/: camera.rs  events.rs  input.rs  lib.rs  main.rs  renderer.rs  shader.wgsl  shaders.rs  state.rs  utils.rs
src/legacy/: initial-lib.rs
static/: index.html  server.js.js
temp/: index.html  lib.rs  renderer.rs  state.rs
