[package]
name = "infinite-canvas"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "infinite-canvas"
path = "src/main.rs"

[features]
default = []
wasm = ["dep:wasm-bindgen", "dep:web-sys", "dep:js-sys"]

[dependencies]
winit = "0.28"
env_logger = "0.10"
log = "0.4"
wgpu = "0.17"
pollster = "0.3"
bytemuck = { version = "1.13", features = ["derive"] }
cgmath = "0.18"
cfg-if = "1.0"

# Optional dependencies
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "Document",
    "Window",
    "Element",
]}
js-sys = { version = "0.3", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.17", features = ["webgl"]}
wasm-bindgen-futures = "0.4"