[package]
name = "webgl_grid"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "Window",
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "WebGlUniformLocation",
    "WebGlBuffer",
    "Element",
    "HtmlElement",
    "MouseEvent",
    "WheelEvent",
    "Event",
    "EventTarget",
    "console",
    "HtmlElement",
    "DomRect",
]